libstatgrab 0.8.1 (21 January 2004)

 * The library part of libstatgrab is now released under the LGPL.
   (the tools are still released under the GPL)
 * File descriptor leak fixed on Linux.
 * strlcpy/strlcat functions added for Solaris 7 to fix compile.
 * statgrab_init error behaviour fixed (primarly for Solaris 7).
 * Some incorrect #includes moved.
 * Significant speed increases to the Solaris disk mapping code in
   statgrab_init, which improves startup time.

libstatgrab 0.8 (06 January 2004)

 * Support for Linux 2.6.
 * Support for Cygwin.
 * Use cNtNdNsN names on Solaris instead of sdN.
 * Fixes and optimisations to saidar.
 * Fixes to the --disable-saidar and --disable-statgrab configure flags.
 * New function to drop elevated privileges some OS's require.
   (after using the init function)

libstatgrab 0.7 (22 October 2003)

 * Support for NetBSD 1.6.x.
 * FreeBSD code optimised.
 * Initialise function allows programs to drop extra privileges (on *BSD).
 * saidar now works even if it can't get all statistics.
 * List of known file systems increased on Linux and *BSD.
 * Minor bug fixes.
 * Tested (and working) on Solaris 9 x86, Linux 2.2 on alpha, and
   Linux 2.4 on amd64.

libstatgrab 0.6.1 (18 October 2003)

 * Support for FreeBSD 5.1/sparc64.
 * Bugs fixed in FreeBSD memory statistics.
 * saidar displays disk percentages more "correctly".
 * Bug fixed displaying hostname in saidar.
 * statgrab now handles unusual /dev layouts more gracefully.
 * Minor packaging changes.

libstatgrab 0.6 (09 October 2003)

 * saidar, a curses-based tool, has been added to give an overview of
   the current system statistics.
 * Added support for FreeBSD 5.1.
 * Documentation is now available in manpages.
 * Fixed major bug in the FreeBSD diskio stats.
 * Added a .pc file for pkgconfig.

libstatgrab 0.5.1 (09 September 2003)

 * Network stats wrap-around bug fixed on Linux and FreeBSD
 * Linux now reads disk information from /proc/partitions if available.