@@ -1,7 +1,7 @@
 libstatgrab and saidar written by Pete Saunders <pajs@i-scream.org>
 statgrab written by Adam Sampson <ats@i-scream.org>
-Autoconf/Automake scripts written by Tim Bishop <tim@i-scream.org>
+Autoconf/Automake scripts written by Tim Bishop <tdb@i-scream.org>
 
-All code is released under the GPL.
+All code is released under the GPL or LGPL.
 
-http://www.i-scream.org
+http://www.i-scream.org/libstatgrab/
