@@ -1,5 +1,5 @@
 libstatgrab README
-http://www.i-scream.org
+http://www.i-scream.org/libstatgrab/
 
 $Id$
 
