@@ -1,3 +1,4 @@
+# $Id$
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
