@@ -1,5 +1,5 @@
 # Makefile for libstatgrab/src
-# http://www.i-scream.org/
+# http://www.i-scream.org/libstatgrab/
 # $Id$
 
 SUBDIRS = libstatgrab statgrab saidar
